--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -1,47 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Console Tricks!</title>
-  <link rel="icon" href="https://fav.farm/🔥" />
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Console Tricks!</title>
+    <link rel="icon" href="https://fav.farm/🔥" />
+  </head>
+  <body>
+    <p onClick="makeGreen()">×BREAK×DOWN×</p>
 
-  <p onClick="makeGreen()">×BREAK×DOWN×</p>
+    <script>
+      const dogs = [
+        { name: 'Snickers', age: 2 },
+        { name: 'Hugo', age: 8 },
+      ]
 
-  <script>
-    const dogs = [{ name: 'Snickers', age: 2 }, { name: 'hugo', age: 8 }];
+      function makeGreen() {
+        const p = document.querySelector('p')
+        p.style.color = '#BADA55'
+        p.style.fontSize = '50px'
+      }
 
-    function makeGreen() {
-      const p = document.querySelector('p');
-      p.style.color = '#BADA55';
-      p.style.fontSize = '50px';
-    }
+      // Regular
+      console.log('Hello World')
 
-    // Regular
+      // Interpolated
+      console.log('Hello I am a %s string!', '☀️')
 
-    // Interpolated
+      // Styled
+      console.log('%c I am a small text!', 'font-size:5px;background:blue')
 
-    // Styled
+      // warning!
+      console.warn('WARNING!')
 
-    // warning!
+      // Error :|
+      console.error('ERROR!')
 
-    // Error :|
+      // Info
+      console.info('This is a info examplo log!')
 
-    // Info
+      // Testing
+      const p = document.querySelector('p')
 
-    // Testing
+      console.assert(p.classList.contains('ouch'), 'That is wrong!')
 
-    // clearing
+      // clearing
+      //console.clear()
 
-    // Viewing DOM Elements
+      // Viewing DOM Elements
+      console.log(p)
+      console.dir(p)
 
-    // Grouping together
+      // Grouping together
+      dogs.forEach((dog) => {
+        //console.group(`${dog.name}`) // console.groupCollapsed()
+        console.groupCollapsed(`Dog: ${dog.name}`)
+        console.log(`This is ${dog.name}`)
+        console.log(`${dog.name} is ${dog.age} old`)
+        console.groupEnd(`${dog.name}`)
+      })
 
-    // counting
+      // counting
+      console.count('Dog')
 
-    // timing
-
-  </script>
-</body>
+      // timing
+      console.time('fetching data')
+      fetch('https://api.github.com/users/thiagotna')
+        .then((response) => response.json())
+        .then((data) => console.table(data))
+      console.timeEnd('fetching data')
+    </script>
+  </body>
 </html>
