--- a/14 - JavaScript References VS Copying/index-START.html
+++ b/14 - JavaScript References VS Copying/index-START.html
@@ -1,57 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>JS Reference VS Copy</title>
-  <link rel="icon" href="https://fav.farm/🔥" />
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>JS Reference VS Copy</title>
+    <link rel="icon" href="https://fav.farm/🔥" />
+  </head>
+  <body>
+    <script>
+      // start with strings, numbers and booleans
+      let number = 100
+      let number2 = number
+      console.log(number, number2)
+      number = 200
+      console.log(number, number2)
 
-  <script>
-    // start with strings, numbers and booleans
+      // Let's say we have an array
+      const players = ['Wes', 'Sarah', 'Ryan', 'Poppy']
 
-    // Let's say we have an array
-    const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
+      // and we want to make a copy of it.
+      const team = players
 
-    // and we want to make a copy of it.
+      // You might think we can just do something like this:
+      team[3] = 'lux'
+      console.log(players)
+      console.log(team)
 
-    // You might think we can just do something like this:
+      // however what happens when we update that array?
 
-    // however what happens when we update that array?
+      // now here is the problem!
 
-    // now here is the problem!
+      // oh no - we have edited the original array too!
 
-    // oh no - we have edited the original array too!
+      // Why? It's because that is an array reference, not an array copy. They both point to the same array!
 
-    // Why? It's because that is an array reference, not an array copy. They both point to the same array!
+      // So, how do we fix this? We take a copy instead!
 
-    // So, how do we fix this? We take a copy instead!
+      // one way
+      const team2 = players.slice()
 
-    // one way
+      // or create a new array and concat the old one in
+      const team3 = [].concat(players)
 
-    // or create a new array and concat the old one in
+      // or use the new ES6 Spread
+      const team4 = [...players]
+      const team5 = Array.from(players)
+      // now when we update it, the original one isn't changed
 
-    // or use the new ES6 Spread
+      // The same thing goes for objects, let's say we have a person object
 
-    // now when we update it, the original one isn't changed
+      // with Objects
+      const person = {
+        name: 'Wes Bos',
+        age: 80,
+      }
 
-    // The same thing goes for objects, let's say we have a person object
+      // and think we make a copy:
+      const captain = Object.assign({}, person)
 
-    // with Objects
-    const person = {
-      name: 'Wes Bos',
-      age: 80
-    };
+      // how do we take a copy instead?
 
-    // and think we make a copy:
+      // We will hopefully soon see the object ...spread
 
-    // how do we take a copy instead?
-
-    // We will hopefully soon see the object ...spread
-
-    // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
-
-  </script>
-
-</body>
+      // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
+      const captain2 = JSON.parse(JSON.stringify(person))
+    </script>
+  </body>
 </html>
